fixed z-index issue with map and burger-menu

--- a/app/sass/blocks/contact/_map.sass
+++ b/app/sass/blocks/contact/_map.sass
@@ -12,7 +12,7 @@
 #map-yandex
     display: block
     position: relative
-    z-index: 7
+    z-index: 4
     width: 100%
     height: 500px
     cursor: pointer
